# transcript_AI_tutor

./: README.md
backend/: README.md  app.py  pyproject.toml  rag.py  requirements.txt
frontend/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: Header.jsx  InputSection.jsx  ResultPanel.jsx  StatusToast.jsx
