[project]
name = "transcript-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "google-generativeai>=0.8.6",
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.2.2",
    "pytube>=15.0.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "youtube-transcript-api>=1.2.4",
]
